--- a/style.css
+++ b/style.css
@@ -6,3 +6,17 @@ header{
 	vertical-align: middle;
 	padding: 10px;
 }
+/*.car{
+	height: 500px;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+}*/
+.card-body{
+	background: grey;
+}
+.card{
+	margin-top: 10px;
+}
