--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ margin: 0px;
 }
 .cart{
 	/*margin-left: 30px;*/
-	margin: 30px 20px;
+	margin: 40px 35px;
 	border: 2px solid black;
 	text-align: center;
 	padding: 50px 5px;
@@ -80,6 +80,13 @@ margin: 0px;
 .cart:hover{
 	background: lightgrey;
 }
-.cart:focus ~ .cart{
+.cart:a{
 	border: 2px solid yellow;
+}
+.textik{
+	font-size: 25px;
+	border-bottom: 1px solid grey;
+}
+.textik:hover{
+	background: lightgrey;
 }
